// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when rendering a list table with fixed widths renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  max-width: 100%;
}

.emotion-1 {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  overflow: hidden;
  pointer-events: none;
  left: 0;
}

.emotion-1:after {
  opacity: 0;
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  border-radius: 100%;
  -webkit-transition: opacity 150ms ease-in-out;
  transition: opacity 150ms ease-in-out;
}

.emotion-1:after {
  right: 100%;
  box-shadow: 4px 0 4px rgba(6,22,33,0.3);
}

.emotion-2 {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  overflow: hidden;
  pointer-events: none;
  right: 0;
}

.emotion-2:after {
  opacity: 0;
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  border-radius: 100%;
  -webkit-transition: opacity 150ms ease-in-out;
  transition: opacity 150ms ease-in-out;
}

.emotion-2:after {
  left: 100%;
  box-shadow: -4px 0 4px rgba(6,22,33,0.3);
}

.emotion-3 {
  overflow-x: auto;
}

.emotion-5 {
  border-collapse: collapse;
  box-sizing: border-box;
  width: 100%;
  border-bottom: 1px solid #E7EEEC;
}

.emotion-6 * {
  border: 0!important;
  min-height: unset!important;
  padding: 0!important;
}

.emotion-7 {
  width: 5%;
}

.emotion-7 * {
  font-size: 14px;
}

.emotion-8 {
  border-width: 0px 1px 3px 1px;
  border-style: solid;
  min-width: 40px;
  padding: 8px 8px;
  box-sizing: border-box;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  border-color: #E7EEEC;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
}

.emotion-10 {
  padding-right: 4px;
  color: #3D4F58;
}

.emotion-11 {
  width: 10%;
}

.emotion-11 * {
  font-size: 14px;
}

.emotion-15 {
  width: 15%;
}

.emotion-15 * {
  font-size: 14px;
}

.emotion-19 {
  width: 20%;
}

.emotion-19 * {
  font-size: 14px;
}

.emotion-23 {
  width: 30%;
}

.emotion-23 * {
  font-size: 14px;
}

.emotion-31 {
  border-top: 1px solid #E7EEEC;
  color: #3D4F58;
}

.emotion-31>td>[data-leafygreen-ui="td-inner-div"] {
  min-height: 40px;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
}

.emotion-31>td:nth-child(1) {
  padding-left: 8px;
}

.emotion-31 td:nth-child(1)>div {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-31 td:nth-child(2)>div {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-31 td:nth-child(3)>div {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-31 td:nth-child(4)>div {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-31 td:nth-child(5)>div {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-31 td:nth-child(6)>div {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-32 {
  overflow-wrap: anywhere;
  word-break: break-word;
  vertical-align: top;
}

.emotion-32 * {
  font-size: 14px!important;
}

.emotion-32>div {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-32>div>span>* {
  margin: 0 0 12px;
}

.emotion-32>div>span>*:last-child {
  margin-bottom: 0;
}

.emotion-33 {
  min-width: 40px;
  padding: 8px 8px;
  box-sizing: border-box;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  line-height: 20px;
  position: relative;
}

.emotion-34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <div
      class="emotion-2"
    />
    <div
      class="emotion-3"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="emotion-4 emotion-5"
      >
        <thead>
          <tr
            class="emotion-6"
            data-testid="leafygreen-ui-header-row"
          >
            <th
              aria-sort="none"
              class="emotion-7 emotion-8"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-9"
              >
                <span
                  class="emotion-10"
                />
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-11 emotion-8"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-9"
              >
                <span
                  class="emotion-10"
                />
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-15 emotion-8"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-9"
              >
                <span
                  class="emotion-10"
                />
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-19 emotion-8"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-9"
              >
                <span
                  class="emotion-10"
                />
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-23 emotion-8"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-9"
              >
                <span
                  class="emotion-10"
                />
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-19 emotion-8"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-9"
              >
                <span
                  class="emotion-10"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            aria-disabled="false"
            class="emotion-31"
            role="row"
          >
            <td
              class="emotion-32 emotion-33"
            >
              <div
                class="emotion-34"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  notebook
                </span>
              </div>
            </td>
            <td
              class="emotion-32 emotion-33"
            >
              <div
                class="emotion-34"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  50
                </span>
              </div>
            </td>
            <td
              class="emotion-32 emotion-33"
            >
              <div
                class="emotion-34"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  8.5x11,in
                </span>
              </div>
            </td>
            <td
              class="emotion-32 emotion-33"
            >
              <div
                class="emotion-34"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  A
                </span>
              </div>
            </td>
            <td
              class="emotion-32 emotion-33"
            >
              <div
                class="emotion-34"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  college-ruled,perforated
                </span>
              </div>
            </td>
            <td
              class="emotion-32 emotion-33"
            >
              <div
                class="emotion-34"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  8
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`when rendering a list-table directive renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  max-width: 100%;
}

.emotion-1 {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  overflow: hidden;
  pointer-events: none;
  left: 0;
}

.emotion-1:after {
  opacity: 0;
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  border-radius: 100%;
  -webkit-transition: opacity 150ms ease-in-out;
  transition: opacity 150ms ease-in-out;
}

.emotion-1:after {
  right: 100%;
  box-shadow: 4px 0 4px rgba(6,22,33,0.3);
}

.emotion-2 {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  overflow: hidden;
  pointer-events: none;
  right: 0;
}

.emotion-2:after {
  opacity: 0;
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  border-radius: 100%;
  -webkit-transition: opacity 150ms ease-in-out;
  transition: opacity 150ms ease-in-out;
}

.emotion-2:after {
  left: 100%;
  box-shadow: -4px 0 4px rgba(6,22,33,0.3);
}

.emotion-3 {
  overflow-x: auto;
}

.emotion-5 {
  border-collapse: collapse;
  box-sizing: border-box;
  width: 100%;
  border-bottom: 1px solid #E7EEEC;
}

.emotion-6 * {
  font-size: 14px;
}

.emotion-7 {
  border-width: 0px 1px 3px 1px;
  border-style: solid;
  min-width: 40px;
  padding: 8px 8px;
  box-sizing: border-box;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  border-color: #E7EEEC;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
}

.emotion-9 {
  padding-right: 4px;
  color: #3D4F58;
}

.emotion-30 {
  border-top: 1px solid #E7EEEC;
  color: #3D4F58;
}

.emotion-30>td>[data-leafygreen-ui="td-inner-div"] {
  min-height: 40px;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
}

.emotion-30>td:nth-child(1) {
  padding-left: 8px;
}

.emotion-30 td:nth-child(1)>div {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-30 td:nth-child(2)>div {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-30 td:nth-child(3)>div {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-30 td:nth-child(4)>div {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-30 td:nth-child(5)>div {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-30 td:nth-child(6)>div {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-31 {
  overflow-wrap: anywhere;
  word-break: break-word;
  vertical-align: top;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  background-color: #F9FBFA;
}

.emotion-31 * {
  font-size: 14px!important;
}

.emotion-31>div {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-31>div>span>* {
  margin: 0 0 12px;
}

.emotion-31>div>span>*:last-child {
  margin-bottom: 0;
}

.emotion-32 {
  min-width: 40px;
  padding: 8px 8px;
  box-sizing: border-box;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  line-height: 20px;
  position: relative;
  font-weight: bold;
}

.emotion-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-34 {
  overflow-wrap: anywhere;
  word-break: break-word;
  vertical-align: top;
}

.emotion-34 * {
  font-size: 14px!important;
}

.emotion-34>div {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-34>div>span>* {
  margin: 0 0 12px;
}

.emotion-34>div>span>*:last-child {
  margin-bottom: 0;
}

.emotion-35 {
  min-width: 40px;
  padding: 8px 8px;
  box-sizing: border-box;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  line-height: 20px;
  position: relative;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <div
      class="emotion-2"
    />
    <div
      class="emotion-3"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="emotion-4 emotion-5"
      >
        <thead>
          <tr
            class=""
            data-testid="leafygreen-ui-header-row"
          >
            <th
              aria-sort="none"
              class="emotion-6 emotion-7"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-8"
              >
                <span
                  class="emotion-9"
                >
                  name
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-6 emotion-7"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-8"
              >
                <span
                  class="emotion-9"
                >
                  quantity
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-6 emotion-7"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-8"
              >
                <span
                  class="emotion-9"
                >
                  size
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-6 emotion-7"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-8"
              >
                <span
                  class="emotion-9"
                >
                  status
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-6 emotion-7"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-8"
              >
                <span
                  class="emotion-9"
                >
                  tags
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-6 emotion-7"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-8"
              >
                <span
                  class="emotion-9"
                >
                  rating
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            aria-disabled="false"
            class="emotion-30"
            role="row"
          >
            <th
              class="emotion-31 emotion-32"
              role="rowheader"
              scope="row"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  journal
                </span>
              </div>
            </th>
            <td
              class="emotion-34 emotion-35"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  25
                </span>
              </div>
            </td>
            <td
              class="emotion-34 emotion-35"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  14x21,cm
                </span>
              </div>
            </td>
            <td
              class="emotion-34 emotion-35"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  A
                </span>
              </div>
            </td>
            <td
              class="emotion-34 emotion-35"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  brown, lined
                </span>
              </div>
            </td>
            <td
              class="emotion-34 emotion-35"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  9
                </span>
              </div>
            </td>
          </tr>
          <tr
            aria-disabled="false"
            class="emotion-30"
            role="row"
          >
            <th
              class="emotion-31 emotion-32"
              role="rowheader"
              scope="row"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  notebook
                </span>
              </div>
            </th>
            <td
              class="emotion-34 emotion-35"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  50
                </span>
              </div>
            </td>
            <td
              class="emotion-34 emotion-35"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  8.5x11,in
                </span>
              </div>
            </td>
            <td
              class="emotion-34 emotion-35"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  A
                </span>
              </div>
            </td>
            <td
              class="emotion-34 emotion-35"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  college-ruled,perforated
                </span>
              </div>
            </td>
            <td
              class="emotion-34 emotion-35"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  8
                </span>
              </div>
            </td>
          </tr>
          <tr
            aria-disabled="false"
            class="emotion-30"
            role="row"
          >
            <th
              class="emotion-31 emotion-32"
              role="rowheader"
              scope="row"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  paper
                </span>
              </div>
            </th>
            <td
              class="emotion-34 emotion-35"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  100
                </span>
              </div>
            </td>
            <td
              class="emotion-34 emotion-35"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  8.5x11,in
                </span>
              </div>
            </td>
            <td
              class="emotion-34 emotion-35"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  D
                </span>
              </div>
            </td>
            <td
              class="emotion-34 emotion-35"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  watercolor
                </span>
              </div>
            </td>
            <td
              class="emotion-34 emotion-35"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  10
                </span>
              </div>
            </td>
          </tr>
          <tr
            aria-disabled="false"
            class="emotion-30"
            role="row"
          >
            <th
              class="emotion-31 emotion-32"
              role="rowheader"
              scope="row"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  planner
                </span>
              </div>
            </th>
            <td
              class="emotion-34 emotion-35"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  75
                </span>
              </div>
            </td>
            <td
              class="emotion-34 emotion-35"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  22.85x30,cm
                </span>
              </div>
            </td>
            <td
              class="emotion-34 emotion-35"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  D
                </span>
              </div>
            </td>
            <td
              class="emotion-34 emotion-35"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  2019
                </span>
              </div>
            </td>
            <td
              class="emotion-34 emotion-35"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  10
                </span>
              </div>
            </td>
          </tr>
          <tr
            aria-disabled="false"
            class="emotion-30"
            role="row"
          >
            <th
              class="emotion-31 emotion-32"
              role="rowheader"
              scope="row"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  postcard
                </span>
              </div>
            </th>
            <td
              class="emotion-34 emotion-35"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  45
                </span>
              </div>
            </td>
            <td
              class="emotion-34 emotion-35"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  10x,cm
                </span>
              </div>
            </td>
            <td
              class="emotion-34 emotion-35"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  D
                </span>
              </div>
            </td>
            <td
              class="emotion-34 emotion-35"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  double-sided,white
                </span>
              </div>
            </td>
            <td
              class="emotion-34 emotion-35"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  2
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
